# blake3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mix.exs
.github/workflows/: build.yml  ci.yml  main.yml  release.yml
config/: config.exs  test.exs
lib/: blake3.ex
lib/blake3/: native.ex
native/blake3/: Cargo.toml
native/blake3/.cargo/: config
native/blake3/src/: lib.rs
test/: blake3_test.exs  ex_blake3_test.exs
