[package]
name = "blake3"
version = "1.0.0"

[features]
default = ["blake3/default", "blake3/rayon"]
neon = ["blake3/neon"]
rayon = ["blake3/rayon"]

[lib]
name = "blake3"
path = "src/lib.rs"
crate_type = ["cdylib"]

[dependencies]
rustler = "0.22"
rustler_codegen = "0.22"
bincode = "1.3"
blake3 = "1.0"
